--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,9 +17,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="5dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/heart" />
+            android:padding="5dp"
+            android:src="@drawable/img_2" />
 
         <ImageButton
             android:id="@+id/circle"
@@ -28,7 +28,7 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:padding="5dp"
-            android:src="@drawable/circle" />
+            android:src="@drawable/img_0" />
 
         <ImageButton
             android:id="@+id/triangle"
@@ -37,14 +37,14 @@
             android:layout_weight="1"
             android:background="@android:color/transparent"
             android:padding="5dp"
-            android:src="@drawable/rectangle" />
+            android:src="@drawable/img_3" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/homeButton"
+        android:layout_above="@+id/imageButton4"
         android:layout_centerHorizontal="true"
         android:text="Find the matching images!!!"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -52,19 +52,10 @@
 
     <ImageButton
         android:id="@+id/imageButton4"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/circle" />
-
-    <ImageButton
-        android:id="@+id/homeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:src="@drawable/homebutton" />
-
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/img_0" />
 </RelativeLayout>
