--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -9,7 +9,7 @@
         android:layout_gravity="center"/>
 
     <TextView android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:text="Hello World, splash"/>
 
 </LinearLayout>
