Changing the UI to add some color.

--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -16,7 +16,7 @@
     <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/webViewTester"
+        android:id="@+id/congratz_Web_View"
         />
 
 </RelativeLayout>
