--- a/app/src/main/res/layout/uidesign.xml
+++ b/app/src/main/res/layout/uidesign.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,4 +9,12 @@
         android:text="This is the UIDesign page!!"
         android:onClick=""/>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/sky"
+        />
+
+</RelativeLayout>
