--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -61,4 +61,14 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/homebutton"
         android:onClick="uiDesign"/>
+
+    <ImageButton
+        android:id="@+id/hpredesign"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/homebutton"
+        android:onClick="hpredesign"/>
 </RelativeLayout>
