--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackground">#0288D1</color>
     <color name="imageBackground">#FFEB3B</color>
+    <color name="lightblue">#03a9f4</color>
+    <color name="accentcolor">#7c4dff</color>
+    <color name="lightprimarycolor">#b3e5fc</color>
 </resources>
