Cleaned up drawable folder. Added MatchShapes. java and match_shapes.xml and I am testing different design ideas using this page.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="lightblue">#03a9f4</color>
     <color name="accentcolor">#7c4dff</color>
     <color name="lightprimarycolor">#b3e5fc</color>
+    <color name="darkprimarycolor">#0288d1</color>
+    <color name="dividercolor">#b6b6b6</color>
+
 </resources>
