--- a/app/src/main/res/layout/hpredesign.xml
+++ b/app/src/main/res/layout/hpredesign.xml
@@ -17,7 +17,7 @@
             android:layout_height="125dp"
             android:layout_marginLeft="20dp"
             android:layout_weight="1"
-            android:background="@drawable/roundedbutton"
+            android:background="@drawable/button_rectangle"
             android:padding="10dp"
             android:text="Would you like to match shapes?"
             android:textColor="#ffffff" />
@@ -29,7 +29,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
-            android:background="@drawable/roundedbutton"
+            android:background="@drawable/button_rectangle"
             android:padding="10dp"
             android:text="Want to see more games?"
             android:textColor="#ffffff" />
@@ -40,7 +40,7 @@
             android:layout_height="125dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
-            android:background="@drawable/roundedbutton"
+            android:background="@drawable/button_rectangle"
             android:padding="10dp"
             android:text="Want to see more games?"
             android:textColor="#ffffff" />
@@ -48,7 +48,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp">
 
         <Button
@@ -56,10 +56,10 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/button_rounded"
             android:layout_weight="1"
             android:padding="10dp"
-            android:text="Got Games?"
+            android:text="Games?"
             android:textColor="#ffffff" />
 
         <Button
@@ -67,10 +67,10 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/button_rounded"
             android:layout_weight="1"
             android:padding="10dp"
-            android:text="Got Games?"
+            android:text="Games?"
             android:textColor="#ffffff" />
 
         <Button
@@ -78,10 +78,10 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/button_rounded"
             android:layout_weight="1"
             android:padding="10dp"
-            android:text="Got Games?"
+            android:text="Games?"
             android:textColor="#ffffff" />
 
         <Button
@@ -89,10 +89,10 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/button_rounded"
             android:layout_weight="1"
             android:padding="10dp"
-            android:text="Got Games?"
+            android:text="Games?"
             android:textColor="#ffffff" />
 
         <Button
@@ -100,10 +100,10 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/button_rounded"
             android:layout_weight="1"
             android:padding="10dp"
-            android:text="Got Games?"
+            android:text="Games?"
             android:textColor="#ffffff" />
 
         <Button
@@ -112,14 +112,52 @@
             android:layout_height="80dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/roundbutton"
+            android:background="@drawable/button_rounded"
             android:layout_weight="1"
             android:padding="10dp"
-            android:text="Got Games?"
+            android:text="Games?"
             android:textColor="#ffffff" />
 
-
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp">
+
+        <Button
+            android:id="@+id/angry_btn"
+
+            android:text="Games?"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            android:layout_width="270dp"
+            android:layout_height="60dp"
+            android:background="@drawable/button_longrectangle"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            />
+
+        <Button
+            android:id="@+id/angry_btn1"
+
+            android:text="Games?"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            android:layout_width="270dp"
+            android:layout_height="60dp"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/button_longrectangle"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            />
+
+
+    </RelativeLayout>
 
 
 </LinearLayout>
