--- a/app/src/main/res/layout/match_shapes.xml
+++ b/app/src/main/res/layout/match_shapes.xml
@@ -5,13 +5,14 @@
     android:id="@+id/rLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightblue"
+    android:background="@drawable/forest_bg"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="35dp"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -20,13 +21,12 @@
             android:layout_margin="10dp"
             android:orientation="horizontal">
 
-
             <Button
                 android:id="@+id/img"
                 android:layout_width="150dp"
                 android:layout_height="125dp"
                 android:layout_alignParentLeft="true"
-                android:background="@drawable/img_0"
+                android:background="@drawable/cat"
                 android:textColor="#ffffff" />
 
 
@@ -35,7 +35,7 @@
                 android:layout_width="150dp"
                 android:layout_height="125dp"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/img_1"
+                android:background="@drawable/dog"
                 android:textColor="#ffffff" />
 
 
@@ -44,7 +44,7 @@
                 android:layout_width="150dp"
                 android:layout_height="125dp"
                 android:layout_alignParentRight="true"
-                android:background="@drawable/img_2"
+                android:background="@drawable/lobster"
                 android:textColor="#ffffff" />
         </RelativeLayout>
 
@@ -64,7 +64,7 @@
                 android:background="@android:color/black" />
 
 
-            <ImageButton
+<!--            <ImageButton
                 android:id="@+id/homeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -72,7 +72,7 @@
                 android:layout_alignParentLeft="true"
                 android:onClick=""
                 android:padding="10dp"
-                android:src="@drawable/homebutton" />
+                android:src="@drawable/homebutton" />-->
 
             <TextView
                 android:id="@+id/textView"
@@ -93,7 +93,7 @@
                 android:layout_height="125dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/img_2"
+                android:background="@drawable/cat"
                 android:textColor="#ffffff" />
 
         </RelativeLayout>
