--- a/app/src/main/res/layout/match_shapes.xml
+++ b/app/src/main/res/layout/match_shapes.xml
@@ -12,14 +12,44 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="10dp"
         android:orientation="vertical">
+
+        <RelativeLayout
+            android:id="@+id/questionLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/matchingImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="2dp"
+                android:text="Find the Matching Image"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:fontFamily="sans-serif-light"
+
+                android:textSize="26dp" />
+
+            <Button
+                android:id="@+id/question_Image_Button"
+                android:layout_width="150dp"
+                android:layout_height="125dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/cat"
+                android:textColor="#ffffff"
+                android:layout_below="@id/matchingImage"/>
+
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
+            android:layout_marginBottom="20dp">
 
             <Button
                 android:id="@+id/img"
@@ -27,7 +57,8 @@
                 android:layout_height="125dp"
                 android:layout_alignParentLeft="true"
                 android:background="@drawable/cat"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_alignParentBottom="true"/>
 
 
             <Button
@@ -36,7 +67,8 @@
                 android:layout_height="125dp"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/dog"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_alignParentBottom="true" />
 
 
             <Button
@@ -45,7 +77,9 @@
                 android:layout_height="125dp"
                 android:layout_alignParentRight="true"
                 android:background="@drawable/lobster"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_alignParentBottom="true" />
+
         </RelativeLayout>
 
         <RelativeLayout
@@ -54,47 +88,47 @@
             android:layout_height="0dp"
             android:layout_weight="2">
 
-<!--            <View
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:layout_above="@+id/textView"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:background="@android:color/black" />-->
+            <!--            <View
+                            android:layout_width="match_parent"
+                            android:layout_height="3dp"
+                            android:layout_above="@+id/textView"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginLeft="50dp"
+                            android:layout_marginRight="50dp"
+                            android:background="@android:color/black" />-->
 
 
-<!--            <ImageButton
-                android:id="@+id/homeButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:onClick=""
-                android:padding="10dp"
-                android:src="@drawable/homebutton" />-->
+            <!--            <ImageButton
+                            android:id="@+id/homeButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentLeft="true"
+                            android:onClick=""
+                            android:padding="10dp"
+                            android:src="@drawable/homebutton" />-->
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/question_Image_Button"
-                android:layout_centerHorizontal="true"
-                android:layout_margin="2dp"
-                android:textSize="26dp"
-                android:text="Find the Matching Image"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="#000000" />
+            <!--            <TextView
+                            android:id="@+id/textView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_above="@+id/question_Image_Button"
+                            android:layout_centerHorizontal="true"
+                            android:layout_margin="2dp"
+                            android:textSize="26dp"
+                            android:text="Find the Matching Image"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textColor="#000000" />
 
 
-            <Button
-                android:id="@+id/question_Image_Button"
-                android:layout_width="150dp"
-                android:layout_height="125dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/cat"
-                android:textColor="#ffffff" />
+                        <Button
+                            android:id="@+id/question_Image_Button"
+                            android:layout_width="150dp"
+                            android:layout_height="125dp"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true"
+                            android:background="@drawable/cat"
+                            android:textColor="#ffffff" />-->
 
         </RelativeLayout>
     </LinearLayout>
