Working on changing the way I display the correct/incorrect answer(See MatchShapes.java->displayIncorrectToast).

--- a/app/src/main/res/layout/match_shapes.xml
+++ b/app/src/main/res/layout/match_shapes.xml
@@ -8,8 +8,30 @@
     android:background="@drawable/forest_bg"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/congratz"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:visibility="invisible"
+            android:src="@drawable/congratz"/>
+
+        <ImageView
+            android:id="@+id/sorry"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:visibility="invisible"
+            android:src="@drawable/sorry"/>
+
+    </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/wholeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
