--- a/app/src/main/res/layout/match_shapes.xml
+++ b/app/src/main/res/layout/match_shapes.xml
@@ -5,7 +5,7 @@
     android:id="@+id/rLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/forest_bg"
+    android:background="@drawable/cartoonsummer"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity">
     <RelativeLayout
