--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -7,16 +7,17 @@
     android:orientation="vertical"
     android:padding="5dp" >
 
-<!--    <ImageView
+    <ImageView
         android:id="@+id/image"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:src="@drawable/congratz"/>-->
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/congratz"/>
+<!--
     <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/congratz_Web_View"
-        />
+        />-->
 
 </RelativeLayout>
