--- a/app/src/main/res/layout/custom_toast.xml
+++ b/app/src/main/res/layout/custom_toast.xml
@@ -3,16 +3,15 @@
     android:id="@+id/custom_toast_layout_id"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF"
-    android:orientation="vertical"
-    android:padding="5dp" >
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/congratz"/>
+        android:src="@drawable/congratz"
+        android:visibility="invisible"/>
 <!--
     <WebView
         android:layout_width="match_parent"
